# vkQuake

./: .gitignore  .gitmodules  CMakeLists.txt  SUMMARY.md  readme.md  rungame.sh
building/: building-with-cmake.md
introduction/: project-overviews.md
src/: CMakeLists.txt  _create_makefiles.sh  _create_projects.bat  _create_projects.sh  _create_quake_projects.bat  _create_quake_projects.sh  clean.sh  vkquake.qpc
src/_qpc_scripts/: _default.qpc_base  base_common.qpc
src/engine/: CMakeLists.txt  cl_input.c  cmd.cpp  cmd.h  common.c  common.cpp  common.h  console.cpp  gl_draw.cpp  gl_rmisc.cpp  gl_screen.c  gl_vidsdl.cpp  host.c  host.cpp  image.cpp  in_sdl.c  in_sdl.cpp  keys.cpp  main_sdl.cpp  menu.c  menu.cpp  net_wins.cpp  net_wipx.cpp  pl_win.c  quakedef.h  sys_sdl_win.c  vid.h  vkquake.qpc
src/launcher/: CMakeLists.txt  launcher.cpp  launcher.qpc
src/libq/: CMakeLists.txt  libq.qpc  platform.h  threadtools.cpp  threadtools.h
src/libq/containers/: quadtree.h
src/mathlib/: CMakeLists.txt  mathlib.h  mathlib.qpc  simd.h  sse.h  vector.cpp  vector.h
src/unittests/: CMakeLists.txt
src/unittests/libq_test/: CMakeLists.txt  main.cpp  tests.h  thread.cpp
src/unittests/mathlib_test/: CMakeLists.txt  main.cpp
